[gd_scene load_steps=16 format=3 uid="uid://8nsw6qdn1c0o"]

[ext_resource type="Script" path="res://scenes/map.gd" id="1_pgdll"]
[ext_resource type="PackedScene" uid="uid://db5xremcmjtg3" path="res://scenes/objects/killing_floor/killing_floor.tscn" id="2_trrbi"]
[ext_resource type="PackedScene" uid="uid://chaf5uqx5ltj2" path="res://scenes/objects/player/player.tscn" id="4_04771"]
[ext_resource type="Texture2D" uid="uid://cc6aunp3hqct5" path="res://addons/debug_tools/kenney_prototypetextures/Dark/texture_02.png" id="5_4ljt2"]
[ext_resource type="PackedScene" uid="uid://c1ra1j7wfgijj" path="res://scenes/components/subcomponents/directional_light_3d.tscn" id="7_mhwni"]
[ext_resource type="Script" path="res://scenes/maps/heaven/tutorial/walk/tutorial_layer.gd" id="7_nbayx"]
[ext_resource type="PackedScene" path="res://scenes/maps/heaven/tutorial/tutorial_layer.tscn" id="8_2ojtw"]
[ext_resource type="Script" path="res://scenes/maps/heaven/tutorial/walk/finish.gd" id="9_1bkvt"]
[ext_resource type="PackedScene" uid="uid://bcdqwr7wudsse" path="res://scenes/maps/heaven/tutorial/message_container.tscn" id="9_wpjt2"]
[ext_resource type="Script" path="res://scenes/maps/heaven/tutorial/walk/step1.gd" id="10_unuh0"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_ftrsi"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tn38v"]
albedo_texture = ExtResource("5_4ljt2")
uv1_triplanar = true

[sub_resource type="PlaneMesh" id="PlaneMesh_a3obb"]
material = SubResource("StandardMaterial3D_tn38v")
size = Vector2(10000, 10000)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j6epr"]

[sub_resource type="SphereShape3D" id="SphereShape3D_uyn55"]
radius = 1.01251

[node name="WalkTutorial" type="Node3D"]
script = ExtResource("1_pgdll")

[node name="KillingFloor" parent="." instance=ExtResource("2_trrbi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.99159, 0)

[node name="Player" parent="." instance=ExtResource("4_04771")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.31678, 0)

[node name="PlayerMoveComponent" parent="Player" index="6"]
can_jump = false

[node name="DirectionalLight3D" parent="." instance=ExtResource("7_mhwni")]

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.43083, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("WorldBoundaryShape3D_ftrsi")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("PlaneMesh_a3obb")

[node name="TutorialLayer" parent="." instance=ExtResource("8_2ojtw")]
script = ExtResource("7_nbayx")
offset_value = 750
highlight_style = SubResource("StyleBoxFlat_j6epr")

[node name="VBoxContainer" parent="TutorialLayer" index="0"]
offset_left = -588.0
offset_top = -218.0
offset_right = 136.0
offset_bottom = 342.0
scale = Vector2(0.8, 0.8)

[node name="LookAround" parent="TutorialLayer/VBoxContainer" index="0"]
visible = false

[node name="HBoxContainer" parent="TutorialLayer/VBoxContainer" index="1"]
visible = false

[node name="HBoxContainer2" type="HBoxContainer" parent="TutorialLayer/VBoxContainer" index="2"]
layout_mode = 2

[node name="LabelW" parent="TutorialLayer/VBoxContainer/HBoxContainer2" instance=ExtResource("9_wpjt2")]
unique_name_in_owner = true
custom_minimum_size = Vector2(153, 137)
layout_mode = 2
size_flags_stretch_ratio = 0.3
text = "W"

[node name="Label" parent="TutorialLayer/VBoxContainer/HBoxContainer2" instance=ExtResource("9_wpjt2")]
unique_name_in_owner = true
layout_mode = 2
text = "Forward"

[node name="HBoxContainer3" type="HBoxContainer" parent="TutorialLayer/VBoxContainer" index="3"]
layout_mode = 2

[node name="LabelS" parent="TutorialLayer/VBoxContainer/HBoxContainer3" instance=ExtResource("9_wpjt2")]
unique_name_in_owner = true
custom_minimum_size = Vector2(153, 137)
layout_mode = 2
size_flags_stretch_ratio = 0.3
text = "S"

[node name="Label2" parent="TutorialLayer/VBoxContainer/HBoxContainer3" instance=ExtResource("9_wpjt2")]
unique_name_in_owner = true
layout_mode = 2
text = "Backward"

[node name="HBoxContainer4" type="HBoxContainer" parent="TutorialLayer/VBoxContainer" index="4"]
layout_mode = 2

[node name="LabelD" parent="TutorialLayer/VBoxContainer/HBoxContainer4" instance=ExtResource("9_wpjt2")]
unique_name_in_owner = true
custom_minimum_size = Vector2(153, 137)
layout_mode = 2
size_flags_stretch_ratio = 0.3
text = "D"

[node name="Label3" parent="TutorialLayer/VBoxContainer/HBoxContainer4" instance=ExtResource("9_wpjt2")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 11
text = "Right"

[node name="HBoxContainer5" type="HBoxContainer" parent="TutorialLayer/VBoxContainer" index="5"]
layout_mode = 2

[node name="LabelA" parent="TutorialLayer/VBoxContainer/HBoxContainer5" instance=ExtResource("9_wpjt2")]
unique_name_in_owner = true
custom_minimum_size = Vector2(153, 137)
layout_mode = 2
size_flags_stretch_ratio = 0.3
text = "A"

[node name="Label4" parent="TutorialLayer/VBoxContainer/HBoxContainer5" instance=ExtResource("9_wpjt2")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 11
text = "Left"

[node name="Finish" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.903898, 0.608106, -24.3874)
visible = false
script = ExtResource("9_1bkvt")
enabled = false

[node name="Area3D" type="Area3D" parent="Finish"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Finish/Area3D"]
shape = SubResource("SphereShape3D_uyn55")

[node name="Label3D" type="Label3D" parent="Finish"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.49721, 0)
text = "Finish"

[node name="Step1" type="Node3D" parent="." node_paths=PackedStringArray("finish", "message")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.903898, 0.608106, -17.0338)
script = ExtResource("10_unuh0")
finish = NodePath("../Finish")
message = NodePath("Label")

[node name="Area3D" type="Area3D" parent="Step1"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Step1/Area3D"]
shape = SubResource("SphereShape3D_uyn55")

[node name="Label3D" type="Label3D" parent="Step1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.49721, 0)
text = "Go Here"

[node name="Label" type="Label" parent="Step1"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -505.5
offset_top = -60.0
offset_right = 505.5
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 41
text = "Movement after jumping allows you to reset speed instantly"

[connection signal="body_entered" from="Finish/Area3D" to="Finish" method="_on_area_3d_body_entered"]
[connection signal="body_entered" from="Step1/Area3D" to="Step1" method="_on_area_3d_body_entered"]

[editable path="Player"]
[editable path="TutorialLayer"]
